ROS2/skinny/log/build_2021-03-11_15-40-37/excavation/stderr.log
  File "/home/team/SoftwareDevelopment/ROS2/skinny/install/excavation/lib/python3.6/site-packages/excavation/excavation_node.py", line 4
    rom odrive.enums import *
             ^
SyntaxError: invalid syntax

